# Nonogram

./: .gitignore  CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  Config.cpp  Config.hpp  DefColors.hpp  FontManager.cpp  FontManager.h  HelloWorldScene.cpp  Language.cpp  Language.hpp  MainScene.cpp  MainScene.h  ProgressGame.cpp  ProgressGame.hpp  Snippets.hpp  StartMenu.cpp  StartMenu.h  Transitions.hpp
Classes/Menu/: AbstractMenu.cpp  AbstractMenu.hpp  GameMap.cpp  GameMap.hpp  SelectLanguage.cpp  SelectLanguage.hpp  SelectLevel.cpp  SelectLevel.h  StartMenu.cpp  StartMenu.h
Resources/conf/lang/: en.json  ru.json
Resources/img/logo/: logos.json
Resources/levels/: levels.json
Resources/levels/guard/: 0  1  2
Resources/levels/kettle/: 0  1  2  3  4  5  6  7  8
Resources/levels/novice/: 0  1  2  3  4  5  6  7  8  9
Resources/levels/veteran/: 0  1  2  3  4  5  6
cocos2d/cocos/network/: SocketIO.cpp  SocketIO.h
cocos2d/cocos/platform/: CCPlatformConfig.h
linux-build/: CMakeCache.txt  Makefile  cmake_install.cmake
linux-build/engine/cocos/core/: Makefile  cmake_install.cmake
map-constructor/: CMakeLists.txt  readme.txt
map-constructor/src/: ImGuiTheme.hpp  MapData.hpp  main.cpp  main.hpp
proj.android/: .gitignore  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/mac/: Info.plist
